<resources>
    <string name="app_name">Agenda</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_apellido">Apellido:</string>
    <string name="hint_edad">Edad:</string>
    <string name="hint_cedula">Cedula:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_fechaNacimiento">fechaNacimiento:</string>
    <string name="hint_correo_electronico">Correo electronico:</string>
    <string name="btn_guarda">Guardar registro</string>
    <string name="menu_nuevo">Nuevo registro</string>
    <string name="menu_salir">Salir</string>
</resources>