<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modificar">


    <TextView
        android:id="@+id/viewmodificar"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="Modificar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewmodificar" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_apellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnombre"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtfecha"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="408dp"
        android:ems="10"
        android:hint="@string/hint_fechaNacimiento"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        app:layout_constraintVertical_bias="0.78" />

    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_correo_electronico"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfecha" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/hint_telefono"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfecha" />

    <EditText
        android:id="@+id/txtcedula"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_cedula"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttelefono" />

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="49dp"
        android:text="Modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcedula" />

    <EditText
        android:id="@+id/txtedad"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/hint_edad"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtfecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>