<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerCliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_cedula" />

        <EditText
            android:id="@+id/txtCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@+id/viewCedula"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_apellido" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewApellido"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewTelefono"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_edad" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewApellido"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_electronico" />

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewfechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fechaNacimiento"
            android:text="@string/hint_fechaNacimiento" />

        <EditText
            android:id="@+id/txtfechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewfechaNacimiento"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_delete"
            app:backgroundTint="@android:color/holo_red_dark" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabmodificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="10dp"
            android:layout_weight=".1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_edit"
            app:backgroundTint="@android:color/holo_blue_light" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>